k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplebank-api
spec:
  selector:
    matchLabels:
      app: simplebank-api
  ports:
    - protocal: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
