k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplebank-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: api.simplebank.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: simplebank-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.simplebank.com
      secretName: simplebank-api-cert
